<resources>
    <string name="app_name">PillsKeeper</string>
    <string name="FarmacoImm">immagine del farmaco</string>
    <string name="ImmChoice">Scegli immagine</string>
    <string name="FarmacoName">Nome farmaco</string>
    <string name="qtConfezione">Quantità nella confezione</string>
    <string name="qtDose">Quantità da assumere</string>
    <string name="TimeInizio">Orario inizio</string>
    <string name="TimeChoice">Scegli orario</string>
    <string name="DaysChoice">Quali giorni?  (default tutti)</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="l">L</string>
    <string name="L">L</string>
    <string name="togglebutton2">ToggleButton</string>
    <string name="m">M</string>
    <string name="M">M</string>
    <string name="togglebutton3">ToggleButton</string>
    <string name="m2">M</string>
    <string name="M2">M</string>
    <string name="togglebutton4">ToggleButton</string>
    <string name="g">G</string>
    <string name="G">G</string>
    <string name="togglebutton5">ToggleButton</string>
    <string name="v">V</string>
    <string name="V">V</string>
    <string name="togglebutton6">ToggleButton</string>
    <string name="s">S</string>
    <string name="S">S</string>
    <string name="togglebutton7">ToggleButton</string>
    <string name="d">D</string>
    <string name="D">D</string>
    <string name="carica">Carica</string>
    <string name="annulla">Annulla</string>
    <string name="welcome">Benvenuto su</string>
    <string name="pillsKeeper">Pills Keeper</string>
    <string name="e_mail">e-Mail</string>
    <string name="rPassword">Reset your Password</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="noAccount">Non hai un account?</string>
    <string name="fPassword">Password dimenticata?</string>
    <string name="noAddPills">Nessuna pillola aggiunta!!</string>
    <string name="todo">TODO</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="PhoneNumber">Numero di telefono cellulare</string>
    <string name="emailMed">Indirizzo e-mail del medico curante</string>
    <string name="avanti"><![CDATA[—> Avanti]]></string>
    <string name="AlreadyAccount">Hai già un account?</string>
    <string name="item">Item</string>
    <string name="Time">Da prenderne 2 alle ore 12:30</string>
    <string name="DatiFid">Dati persona fidata:</string>
    <string name="elimina">← elimina</string>
    <string name="AddAnother">Aggiungi un\'altro</string>
    <string name="avantiP">→ Avanti</string>
    <string name="DatiPrimaFid">Dati prima persona fidata:</string>
    <string name="indietro">← indietro</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="modifica">Modifica</string>
    <string name="delete">Cancella</string>
    <string name="aggiorna">Aggiorna</string>
    <string name="apri_in_maps">Apri in Maps</string>
    <string name="farmacia_vicina">Trova la farmacia più vicina</string>
    <string name="esci">Esci dall\'account</string>
</resources>